--- a/src/style.scss
+++ b/src/style.scss
@@ -32,7 +32,10 @@
     flex-direction: column;
     gap: 10px;
     align-items: center;
-
+    img{
+      width: 82px;
+  }
+    
     .logo {
       color: #5d5b8d;
       font-weight: bold;
